--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
         /* Packages Section */
         #packages { padding-top: 60px; }
         #individual-tests { padding-top: 60px; }
+        #request-tests { padding-top: 60px; } /* Added for the new section */
         .section-title { text-align: center; margin-bottom: 50px; font-size: 2.2em; }
         .packages-grid {
             display: grid;
@@ -618,6 +619,7 @@
             <ul class="desktop-nav-links">
                 <li><a href="#packages">Packages</a></li>
                 <li><a href="#individual-tests">Individual Tests</a></li>
+                <li><a href="#request-tests">Request Tests</a></li> <!-- Added new navigation item -->
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -652,6 +654,7 @@
         <ul class="mobile-nav-links">
             <li><a href="#packages">Packages</a></li>
             <li><a href="#individual-tests">Individual Tests</a></li>
+            <li><a href="#request-tests">Request Tests</a></li> <!-- Added new navigation item -->
             <li><a href="#about">About Us</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -768,6 +771,25 @@
                     <i class="fas fa-home"></i> All Tests Available with FREE Home Sample Collection!
                 </p>
                 <div class="packages-grid">
+                    
+                    <!-- Fever Profile -->
+                    <div id="test-fever-profile" class="package-card">
+                        <div class="package-image"><img src="https://static.vecteezy.com/system/resources/previews/027/705/202/non_2x/sick-kids-has-fever-and-take-thermometer-in-mouth-vector.jpg" alt="Fever Profile"></div>
+                        <div class="package-content">
+                            <h4>Fever Profile</h4>
+                             <div class="price-container">
+                                <div class="price-tag">₹800</div>
+                                <div class="original-price">₹1200</div>
+                                <div class="discount-badge">33% OFF</div>
+                            </div>
+                            <!-- UPDATED FEVER PROFILE DESCRIPTION -->
+                            <p class="tests-list">Essential tests for fever diagnosis. Includes: Dengue NS1, IgG, IgM (Day 1), Typhoid IgG, IgM (Day 1), Malaria Parasite, Hb, CRP.</p>
+                            <div class="button-container">
+                                <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_R5XyS03eB7huIF" async> </script> </form> <!-- NOTE: This is a placeholder Razorpay ID, replace it with the correct one -->
+                                <a href="https://wa.me/916363111328?text=I%20would%20like%20to%20order%20the%20Fever%20Profile%20via%20WhatsApp." target="_blank" class="whatsapp-order-button"><i class="fab fa-whatsapp"></i> Order on WhatsApp</a>
+                            </div>
+                        </div>
+                    </div>
                     
                     <!-- Free Sugar Test -->
                     <div id="test-free-sugar-test-rbs" class="package-card">
@@ -1086,6 +1108,17 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- NEW SECTION: Request Other Tests -->
+        <section id="request-tests">
+            <div class="container" style="text-align: center; max-width: 800px;">
+                <h2 class="section-title">Can't Find Your Test?</h2>
+                <p>If the test you're looking for isn't listed, don't worry! You can easily request it through WhatsApp. Our team will get back to you to arrange the required test with free home sample collection.</p>
+                <div class="button-container" style="margin-top: 30px;">
+                    <a href="https://wa.me/916363111328?text=Hello%2C%20I%20would%20like%20to%20request%20a%20test%20that%20is%20not%20listed.%20Please%20assist%20me." target="_blank" class="whatsapp-order-button"><i class="fab fa-whatsapp"></i> Request Other Tests on WhatsApp</a>
                 </div>
             </div>
         </section>
